<resources>
    <string name="app_name">MiShop Customer</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="ringkasan_registrasi">Ringkasan Registrasi</string>
    <string name="shop">Shop</string>
    <string name="services">Services</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="express">Express</string>
    <string name="layanan">Layanan</string>
    <string name="news">Berita</string>
    <string name="games">Games</string>
    <string name="c2c">MySHOP</string>
    <string name="beranda">Beranda</string>
    <string name="inbox">Inbox</string>
    <string name="bantuan">Bantuan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="akun">Akun</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="login_with_facebook">Login with Facebook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar">Daftar</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="batakan_pesanan">Batakan Pesanan</string>
    <string name="title_activity_tracking_driver">Posisi Driver</string>
    <string name="ambil_penawaran">Ambil</string>
    <string name="tolak_penawaran">Tolak</string>
    <string name="dummy_price">Rp. 60.000</string>
    <string name="link_dummy">
        https://cdn.idntimes.com/content-images/community/2018/04/w2blgd6kao1481008955-88d73c4dbd5a60ffc2c5e3ad34c47e07_600x400.jpg
    </string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="detail_shop">Detail Shop</string>
    <string name="proses">Proses</string>
    <string name="harga">Harga</string>

    <string name="slogan">look&#160;&#160;&#160;first&#160;&#160;&#160;and&#160;&#160;&#160;get&#160;&#160;&#160;it
        \nsimple,&#160;&#160;&#160;quick&#160;&#160;&amp;&#160;&#160;easy
    </string>
    <string name="kritik_dan_saran">Kritik dan Saran</string>
    <string name="loading">memproses data…</string>
    <string name="welcome">Selamat datang</string>
    <string name="no_data">Belum ada data kak 😔\n Yuk Posting 😋</string>
    <string name="title_activity_marker_shop">Map</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyDSMub1sBU2AnCOr8_MKJV2JC_c8I0UOsM
    </string>
    <string name="credits">Credits</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="thanks_to_detik_com_sebagai_penyedia_rss_news">Thanks to Detik.com sebagai penyedia RSS News</string>
    <string name="thanks_to_famobi_sebagai_penyedia_games_html5">Thanks to Famobi sebagai penyedia games HTML5</string>
    <string name="info_dasar">Informasi Dasar</string>

</resources>
