<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/beranda"
          android:title="@string/beranda"
          android:icon="@drawable/ic_home"
            />
    <item android:id="@+id/inbox"
          android:title="@string/inbox"
          android:icon="@drawable/ic_inbox"
            />
    <item android:id="@+id/bantuan"
          android:title="@string/bantuan"
          android:icon="@drawable/ic_help"
            />
    <item android:id="@+id/notifikasi"
          android:title="@string/notifikasi"
          android:icon="@drawable/ic_notifications"
            />
    <item android:id="@+id/akun"
          android:title="@string/akun"
          android:icon="@drawable/ic_profile"
            />
</menu>