<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".tentang.TentangActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                    android:layout_margin="@dimen/margin_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/tentang_aplikasi"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:padding="@dimen/margin_padding"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    />

                    <TextView
                            android:text="@string/dummy_text"
                            android:layout_width="match_parent"
                            android:padding="@dimen/margin_padding"
                            android:layout_height="wrap_content"
                    />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView

                    android:layout_margin="@dimen/margin_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/credits"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:padding="@dimen/margin_padding"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    />

                    <TextView
                            android:text="@string/thanks_to_detik_com_sebagai_penyedia_rss_news"
                            android:layout_width="match_parent"
                            android:padding="@dimen/margin_padding"
                            android:layout_height="wrap_content"
                    />
                    <TextView
                            android:text="@string/thanks_to_famobi_sebagai_penyedia_games_html5"
                            android:layout_width="match_parent"
                            android:padding="@dimen/margin_padding"
                            android:layout_height="wrap_content"
                    />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
