<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_margin="@dimen/margin_padding"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
            android:padding="@dimen/margin_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/idShop"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:id="@+id/postContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/fotouser"
                    android:layout_marginEnd="@dimen/margin_padding"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

            <TextView
                    android:text="Bambang Adi Atmojo"
                    android:layout_toEndOf="@id/fotouser"
                    android:id="@+id/namaPosting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="25 Januari 2019"
                    android:textSize="10sp"
                    android:layout_toEndOf="@id/fotouser"
                    android:layout_below="@id/namaPosting"
                    android:id="@+id/datePosting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_below="@+id/datePosting"
                    android:layout_toEndOf="@id/fotouser"
                    android:layout_marginEnd="@dimen/margin_padding"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="25 Januari 2019"
                        android:textSize="12sp"
                        android:id="@+id/lokasi"
                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/hargaPost"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/green"
                        android:text="@string/dummy_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/deskripsiContainer"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_padding"
                android:layout_below="@id/postContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/deskripsi"
                    android:text="@string/lorem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:layout_marginTop="@dimen/margin_padding"
                    android:id="@+id/imagePost"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="326dp"
                    android:layout_height="183dp"/>
        </LinearLayout>

        <RelativeLayout
                android:layout_marginTop="@dimen/margin_padding"
                android:layout_below="@id/deskripsiContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/terima"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal"
                    android:background="@drawable/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView
                        android:src="@drawable/ic_check"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:text="@string/ambil_penawaran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
