<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/header"
                    android:padding="@dimen/margin_padding"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/layanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/mainService"
                    android:padding="@dimen/margin_padding"
                    android:layout_below="@+id/header"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@mipmap/ic_shop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:layout_marginTop="@dimen/margin_padding"
                        android:layout_marginBottom="@dimen/margin_padding"
                        android:layout_width="1dp"
                        android:background="#000"
                        android:layout_height="match_parent"/>

                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@mipmap/ic_service"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:layout_marginTop="@dimen/margin_padding"
                        android:layout_marginBottom="@dimen/margin_padding"
                        android:layout_width="1dp"
                        android:background="#000"
                        android:layout_height="match_parent"/>

                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@mipmap/ic_car"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:layout_marginTop="@dimen/margin_padding"
                        android:layout_marginBottom="@dimen/margin_padding"
                        android:layout_width="1dp"
                        android:background="#000"
                        android:layout_height="match_parent"/>

                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@mipmap/ic_bike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:layout_marginTop="@dimen/margin_padding"
                        android:layout_marginBottom="@dimen/margin_padding"
                        android:layout_width="1dp"
                        android:background="#000"
                        android:layout_height="match_parent"/>

                <LinearLayout
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/margin_padding"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:src="@mipmap/ic_express"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <View
                        android:layout_marginTop="@dimen/margin_padding"
                        android:layout_marginBottom="@dimen/margin_padding"
                        android:layout_width="1dp"
                        android:background="#000"
                        android:layout_height="match_parent"/>
            </LinearLayout>

            <TextView
                    android:padding="@dimen/margin_padding"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:text="@string/news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <com.synnapps.carouselview.CarouselView
                    android:id="@+id/newsView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp"/>

            <LinearLayout
                    android:paddingBottom="@dimen/margin_padding"
                    android:layout_below="@+id/news"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:padding="@dimen/margin_padding"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:padding="@dimen/margin_padding"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:layout_gravity="center"
                            android:text="@string/games"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <android.support.v7.widget.RecyclerView
                            android:id="@+id/listGame"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

                <LinearLayout
                        android:padding="@dimen/margin_padding"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    <TextView
                            android:padding="@dimen/margin_padding"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:layout_gravity="center"
                            android:text="@string/c2c"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <com.synnapps.carouselview.CarouselView
                            android:id="@+id/c2cView"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            app:fillColor="#FFFFFFFF"
                            app:pageColor="#00000000"
                            app:radius="6dp"
                            app:slideInterval="3000"
                            app:strokeColor="#FF777777"
                            app:strokeWidth="1dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>